src/test/deca/context/invalid/object/class_new_class_inexistante.deca
//  Description : 
// 
//      Test incorrect qui utilise un new B
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA = new B();
}